--- a/EXP-1/exp1.html
+++ b/EXP-1/exp1.html
@@ -27,7 +27,7 @@
     font-family: 'Arial', sans-serif;
 }
 body {
-    background: linear-gradient(135deg, #2c3e50, #34495e);
+    background: linear-gradient(135deg, #b9c3ce, #b9c4cf);
     background-size: 400% 400%;
     animation: gradientAnimation 6s ease infinite;
     color: #ecf0f1;
